--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,2 +1,2 @@
-<a href="https://github.com/abuisa/web">Project on Github</a>
-<a href="https://ikhwanelyas.blogspot.co.id/">Other Blog</a>
+<a href="https://github.com/abuisa/web">Github</a>
+<a href="https://ikhwanelyas.blogspot.co.id/">Blog</a>
