Update All Categories and delete about

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,2 @@
-<footer><span>@2017 - IkhwanElyas | <a href="https://github.com/abuisa/web">github</a> </span>
+<footer><span>@2017 - IkhwanElyas | <a href="https://github.com/abuisa/web">github</a> </span> | <a href="https://ikhwanelyas.blogspot.co.id/">Blog</a>
 </footer>
