--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,2 @@
-<footer><span>@2017 -  <a href="{{ site.baseurl }}/">IkhwanElyas</a> | <a href="https://github.com/abuisa/web">github</a> </span> | <a href="https://ikhwanelyas.blogspot.co.id/">Blog</a>
+<footer><span>@2017 -  <a href="{{ site.baseurl }}/">IkhwanElyas</a> | <a href="https://github.com/abuisa/abuisa.github.io" target="_blank">github</a> </span> | <a href="https://ikhwanelyas.blogspot.co.id/" target="_blank">Blog</a>
 </footer>
