--- a/_includes/modulku.html
+++ b/_includes/modulku.html
@@ -2,7 +2,7 @@
 <body>
 <script>
 	window.onload = function(){ 
-	    alert("TES PESAN-PESAN, Hello! I am an alert box!");
+	    //alert("TES PESAN-PESAN, Hello! I am an alert box!");
 
 		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
 			//document.getElementById("jd").innerHTML = "<b>---Hello SmartPhone---</b>";
@@ -13,9 +13,7 @@
 			d1.removeAttribute("class")
 			d2.removeAttribute("class")
 			d3.removeAttribute("class")
-
 		}
-
 	};
 </script>
 </body>
