--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -2,13 +2,15 @@
 //
 // Based on the typographic scale: 12, 14, 16, 18, 21, 24, 36, 48, 60, 72.
 //
+// Ukuran font asli adalah :  font-size   : 16px; 
+// saya ubah menjadi :  font-size   : 18px; 
 
 body
 {
   font-family : "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size   : 16px;
+  font-size   : 18px; 
   color: #333;
 }
 
