--- a/css/main.scss
+++ b/css/main.scss
@@ -38,4 +38,18 @@
 .tengah{
 	display: inline-block;
 	width: 26%;
+	padding-left: 1.6cm;
+}
+
+
+.kate1{
+    float:left;
+    height:100%;
+    width:40%;
+	border-right:0px solid grey;   
+}
+.kate2{
+	display: inline-block;
+	width: 45%;
+	padding-left: 1.6cm;
 }
