--- a/_includes/modulku.html
+++ b/_includes/modulku.html
@@ -2,17 +2,15 @@
 <body>
 <script>
 	window.onload = function(){ 
-	    //alert("TES PESAN-PESAN, Hello! I am an alert box!");
+	    //alert("TES PESAN-PESAN .........!");
 
 		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
 			//document.getElementById("jd").innerHTML = "<b>---Hello SmartPhone---</b>";
 			//zoom();
-			var d1 = document.getElementById('pertama');
-			var d2 = document.getElementById('tengah');
-			var d3 = document.getElementById('kedua');
+			var d1 = document.getElementById('linkdiv');
+			var d2 = document.getElementById('ktgoridiv');
 			d1.removeAttribute("class")
 			d2.removeAttribute("class")
-			d3.removeAttribute("class")
 		}
 	};
 </script>
