--- a/_includes/modulku.html
+++ b/_includes/modulku.html
@@ -1,16 +1,22 @@
 <html>
 <body>
 <script>
+	
+//===============
 	window.onload = function(){ 
 	    //alert("TES PESAN-PESAN .........!");
 
 		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
 			//document.getElementById("jd").innerHTML = "<b>---Hello SmartPhone---</b>";
 			//zoom();
+			/*
 			var d1 = document.getElementById('linkdiv');
 			var d2 = document.getElementById('ktgoridiv');
 			d1.removeAttribute("class")
 			d2.removeAttribute("class")
+			*/
+			var contentToRemove = document.querySelectorAll("#linkdiv");
+			$(contentToRemove).remove(); 
 		}
 	};
 </script>
