--- a/_includes/modulku.html
+++ b/_includes/modulku.html
@@ -9,16 +9,31 @@
 		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
 			//document.getElementById("jd").innerHTML = "<b>---Hello SmartPhone---</b>";
 			//zoom();
-			/*
-			var d1 = document.getElementById('linkdiv');
-			var d2 = document.getElementById('ktgoridiv');
-			d1.removeAttribute("class")
-			d2.removeAttribute("class")
-			*/
-			var contentToRemove = document.querySelectorAll("#linkdiv");
-			$(contentToRemove).remove(); 
+			var d1 = document.getElementById('linkdiv1');
+			var d2 = document.getElementById('linkdiv2');
+			var d3 = document.getElementById('linkdiv3');
+			d1.removeAttribute("class");
+			d2.removeAttribute("class");
+			d3.removeAttribute("class");
+
+			//alert("TES PESAN-PESAN .........!");
 		}
+		else
+		{
+			;
+/*
+			//alert("TES PESAN-PESAN .........!");
+			var d1 = document.getElementById('linkdiv1');
+			var d2 = document.getElementById('linkdiv2');
+			var d3 = document.getElementById('linkdiv3');
+			d1.removeAttribute("class");
+			d2.removeAttribute("class");
+			d3.removeAttribute("class");
+*/
+		}
+
 	};
+
 </script>
 </body>
 </html>
