Ubah site.baseurl menjadi site.url pada header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,18 @@
 <header id="header" class="parent justify-spaceBetween">
   <div class="inner w100 relative">
+<!--
     <span class="f-left">  
       <a href="{{ site.baseurl }}/">
         <h1>
-          Ikhwan<span>Elyas</span>
+          Ikhwan<span>Elyas</span> 
+        </h1>
+      </a>
+    </span>
+-->
+    <span class="f-left">  
+      <a href="{{ site.url }}/"> <!-- |site.baseurl : {{site.baseurl}} | site.url : {{ site.url }} -->
+        <h1>
+          Ikhwan<span>Elyas</span> 
         </h1>
       </a>
     </span>
