--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,8 @@
+<footer><span>@2017 -  <a href="{{ site.url }}/">IkhwanElyas</a> | <a href="https://github.com/abuisa/abuisa.github.io" target="_blank">github</a> </span> | <a href="https://ikhwanelyas.blogspot.co.id/" target="_blank">Blog</a>
+</footer>
+
+
+<!-- original script :
 <footer><span>@2017 -  <a href="{{ site.baseurl }}/">IkhwanElyas</a> | <a href="https://github.com/abuisa/abuisa.github.io" target="_blank">github</a> </span> | <a href="https://ikhwanelyas.blogspot.co.id/" target="_blank">Blog</a>
 </footer>
+-->
