--- a/css/main.scss
+++ b/css/main.scss
@@ -54,3 +54,11 @@
 	width: 55%;
 	padding-left: 1.6cm;
 }
+
+.ar{
+	float: right;
+	alignt: right;
+	display: inline;
+	margin-left: 50px;
+	margin-right: 360px;
+}
