--- a/_includes/penelitian/reff.html
+++ b/_includes/penelitian/reff.html
@@ -2,13 +2,15 @@
 <table>
   <tr>
 	<th>No.</th>
+	<th>Judul</th>
 	<th>Penulis</th>
 	<th>Abstrak</th>
 	<th>Metode</th>
 	<th>File</th>
   </tr>
   <tr>
-	<td>1 </td>
+	<td>1. </td>
+	<td>Automated malware detection using artifacts in forensic memory images </td>
 	<td>Rui Li, Bo Yuan dkk. </td>
 	<td> Malware is one of the greatest and most rapidly growing threats to the digital world. Traditional signature-based detection is no longer adequate to detect new variants and highly targeted malware. Furthermore, dynamic detection is often circumvented with anti-VM and/or anti-debugger techniques.
 Recently heuristic approaches have been explored to enhance detection accuracy while maintaining the generality of a model to detect unknown malware samples. In this paper, we investigate three feature types extracted from memory images – registry activity, imported libraries, and API function calls. After evaluating the importance of the different features, different machine learning techniques are implemented to compare performances of malware detection using the three feature types, respectively.
@@ -22,15 +24,10 @@ The highest accuracy achieved was 96%, and was reached using a support vector ma
 	<td> </td>
 	<td> </td>
 	<td> </td>
-	<td> </td>
+	<td class="tdhide"> </td>
+	<td class="tdhide"> </td>
   </tr>
-  <tr>
-	<td> </td>
-	<td> </td>
-	<td> </td>
-	<td> </td>
-	<td> </td>
-  </tr>
+
 </table>
 <pre>
 </pre>
