--- a/css/main.scss
+++ b/css/main.scss
@@ -41,7 +41,6 @@
 	padding-left: 1cm;
 }
 
-
 .kate1{
     float:left;
     height:100%;
@@ -68,16 +67,16 @@ table, td, th {
     text-align: left;
 }
 table {
-    border-collapse: collapse;
-    width: 100%;	
+    	border-collapse: collapse;
+    	width: 100%;	
 }
 th, td {
-    padding: 12px;
-}
-th{
+    	padding: 12px;
+	vertical-align: top;
 	border-bottom: 1px solid #ddd;
 }
-td{
-	border-bottom: 0.6px solid #ddd;
+
+.divtable {
+	padding-top: 1cm;
 }
 
