Update Ref-View in rows

--- a/_includes/penelitian/m-reff.html
+++ b/_includes/penelitian/m-reff.html
@@ -28,6 +28,7 @@ The highest accuracy achieved was 96%, and was reached using a support vector ma
   </tr>
 </table>
 </div>
+
 <div class="divtable">
 <table>
   <tr>
@@ -36,50 +37,22 @@ The highest accuracy achieved was 96%, and was reached using a support vector ma
   </tr>
   <tr>
 	<th>Judul</th>
-	<td>Automated malware detection using artifacts in forensic memory images </td>
+	<td>Classification of Malware Families Based on N-grams Sequential Pattern Features </td>
   </tr>
   <tr>
 	<th>Penulis</th>
-	<td>Rui Li, Bo Yuan dkk. </td>
+	<td>Chatchai L., Ohm Sornil </td>
   </tr>
   <tr>
 	<th>Abstrak</th>
-	<td> Malware is one of the greatest and most rapidly growing threats to the digital world. Traditional signature-based detection is no longer adequate to detect new variants and highly targeted malware. Furthermore, dynamic detection is often circumvented with anti-VM and/or anti-debugger techniques.
-Recently heuristic approaches have been explored to enhance detection accuracy while maintaining the generality of a model to detect unknown malware samples. In this paper, we investigate three feature types extracted from memory images – registry activity, imported libraries, and API function calls. After evaluating the importance of the different features, different machine learning techniques are implemented to compare performances of malware detection using the three feature types, respectively.
-The highest accuracy achieved was 96%, and was reached using a support vector machine model, fitted on data extracted from registry activity.</td>
+	<td>Malware family identification is a complex process involving extraction of distinctive characteristics from a set of malware samples. Malware authors employ various techniques to prevent the identification of unique characteristics of their programs, such as, encryption and obfuscation. In this paper, we
+present n-gram based sequential features extracted from content of the files. N-grams are extracted from files; sequential n-gram patterns are determined; pattern statistics are calculated and reduced by the sequential floating forward selection method; and a classifier is used to determine the family of malware. Three classification models: C4.5, multilayer perceptron, and support vector machine are studied. Experimental results on a standard malware test collection show that the proposed method performs well, with the classification accuracy of 96.64%.  </td>
   </tr>
   <tr>
 	<th>Metode</th>
-	<td>Our approach is a reactive one, in that it detects malware that is already on the system. There are several use cases for such an approach. First, anti-virus software will fail with unknown malware; therefore, applying our model on a memory image will either confirm or dispute an AV’s claim of a clean system. Second, forensic investigators may find this approach useful when searching for malware in memory images. As stated in [28], ”Analysts of the real world are often constrained by budgets and billable hours”; therefore, automating the process of malware detection might save forensic investigators time when analyzing memory images. Once the models are trained, artifacts can be extracted from a memory image using Volatility [15], and used to apply the model on. </td>
-  </tr>
-  <tr>
-	<th>File</th>
-	<td> </td>
-  </tr>
-</table>
-</div>
-
-<div class="divtable">
-<table>
-  <tr>
-	<th>No.</th>
-	<td>3. </td>
-  </tr>
-  <tr>
-	<th>Judul</th>
-	<td> </td>
-  </tr>
-  <tr>
-	<th>Penulis</th>
-	<td> </td>
-  </tr>
-  <tr>
-	<th>Abstrak</th>
-	<td> </td>
-  </tr>
-  <tr>
-	<th>Metode</th>
-	<td> </td>
+	<td>Features are created in 4 major steps: n-gram extraction,
+sequential pattern extraction, pattern statistics calculation, and
+feature reduction. </td>
   </tr>
   <tr>
 	<th>File</th>
