--- a/_includes/penelitian/reff.html
+++ b/_includes/penelitian/reff.html
@@ -20,12 +20,15 @@ The highest accuracy achieved was 96%, and was reached using a support vector ma
   </tr>
 
   <tr>
+	<td>2. </td>
+	<td>Classification of Malware Families Based on N-grams Sequential Pattern Features </td>
+	<td>Chatchai L., Ohm Sornil </td>
+	<td>Malware family identification is a complex process involving extraction of distinctive characteristics from a set of malware samples. Malware authors employ various techniques to prevent the identification of unique characteristics of their programs, such as, encryption and obfuscation. In this paper, we
+present n-gram based sequential features extracted from content of the files. N-grams are extracted from files; sequential n-gram patterns are determined; pattern statistics are calculated and reduced by the sequential floating forward selection method; and a classifier is used to determine the family of malware. Three classification models: C4.5, multilayer perceptron, and support vector machine are studied. Experimental results on a standard malware test collection show that the proposed method performs well, with the classification accuracy of 96.64%. </td>
+	<td>Features are created in 4 major steps: n-gram extraction,
+sequential pattern extraction, pattern statistics calculation, and
+feature reduction. </td>
 	<td> </td>
-	<td> </td>
-	<td> </td>
-	<td> </td>
-	<td class="tdhide"> </td>
-	<td class="tdhide"> </td>
   </tr>
 
 </table>
