Update Penelitian Ref

--- a/_includes/modulku.html
+++ b/_includes/modulku.html
@@ -12,10 +12,14 @@
 			var d1 = document.getElementById('linkdiv1');
 			var d2 = document.getElementById('linkdiv2');
 			var d3 = document.getElementById('linkdiv3');
+			//var d4 = document.getElementById('sir');
+
 			d1.removeAttribute("class");
 			d2.removeAttribute("class");
 			d3.removeAttribute("class");
-
+			//d4.removeAttribute("class");
+			//d4.style.visibility = "hidden";
+			
 			//alert("TES PESAN-PESAN .........!");
 		}
 		else
