--- a/_includes/penelitian/m-reff.html
+++ b/_includes/penelitian/m-reff.html
@@ -24,7 +24,7 @@ The highest accuracy achieved was 96%, and was reached using a support vector ma
   </tr>
   <tr>
 	<th>File</th>
-	<td> <a href="reff/Automated-malware-detection-using-artifacts-in-forensic-memory-imagesmosli2016.pdf" target="_blank">tes pdf</a></td>
+	<td> <a href="reff/Automated-malware-detection-using-artifacts-in-forensic-memory-imagesmosli2016.pdf" target="_blank">Automated-malware-detection-using-artifacts-in-forensic-memory-imagesmosli2016.pdf</a></td>
   </tr>
 </table>
 </div>
@@ -56,7 +56,7 @@ feature reduction. </td>
   </tr>
   <tr>
 	<th>File</th>
-	<td> </td>
+	<td><a href="reff/Classification-of-malware-families-based-on-N-grams-sequential-pattern-features.pdf" target="_blank">Classification-of-malware-families-based-on-N-grams-sequential-pattern-features.pdf</a> </td>
   </tr>
 
 
@@ -87,7 +87,7 @@ feature reduction. </td>
   </tr>
   <tr>
 	<th>File</th>
-	<td> </td>
+	<td> <a href="reff/Comparative-Analysis-of-Feature-Extraction-Methods-of-pxc.pdf" target="_blank">Comparative-Analysis-of-Feature-Extraction-Methods-of-pxc.pdf </a> </td>
   </tr>
 </table>
 </div>
@@ -116,7 +116,7 @@ feature reduction. </td>
   </tr>
   <tr>
 	<th>File</th>
-	<td> </td>
+	<td><a href="reff/Feature-Selection-and-Extraction-for-Malware-Classification-201505-11.pdf" target="_blank">Feature-Selection-and-Extraction-for-Malware-Classification-201505-11.pdf </a>  </td>
   </tr>
 </table>
 </div>
@@ -145,7 +145,7 @@ feature reduction. </td>
   </tr>
   <tr>
 	<th>File</th>
-	<td> </td>
+	<td><a href="reff/A-STATIC-MALWARE-DETECTION-SYSTEM-USING-1308.2831.pdf" target="_blank">A-STATIC-MALWARE-DETECTION-SYSTEM-USING-1308.2831.pdf </a>  </td>
   </tr>
 </table>
 </div>
@@ -174,7 +174,7 @@ feature reduction. </td>
   </tr>
   <tr>
 	<th>File</th>
-	<td> </td>
+	<td><a href="reff/New-Malicious-Code-Detection-Based-on-N-Gram-Analy.pdf" target="_blank">New-Malicious-Code-Detection-Based-on-N-Gram-Analy.pdf</a>  </td>
   </tr>
 </table>
 </div>
@@ -215,7 +215,7 @@ novel malwares. </td>
   </tr>
   <tr>
 	<th>File</th>
-	<td> </td>
+	<td><a href="reff/DATA-MINING-METHODS-FOR-MALWARE-DETECTION.pdf" target="_blank">DATA-MINING-METHODS-FOR-MALWARE-DETECTION.pdf </a>  </td>
   </tr>
 </table>
 </div>
@@ -244,7 +244,7 @@ novel malwares. </td>
   </tr>
   <tr>
 	<th>File</th>
-	<td> </td>
+	<td><a href="reff/Feature-Extraction-and-Static-Analysis-Malware-LSGrini-2015.pdf" target="_blank">Feature-Extraction-and-Static-Analysis-Malware-LSGrini-2015.pdf </a>  </td>
   </tr>
 </table>
 </div>
