Update Reff and btn top in penelitian

--- a/_includes/penelitian/m-reff.html
+++ b/_includes/penelitian/m-reff.html
@@ -2,7 +2,7 @@
 <table>
   <tr>
 	<th>No.</th>
-	<td>1. </td>
+	<td>1. <b>Paper</b></td>
   </tr>
   <tr>
 	<th>Judul</th>
@@ -33,7 +33,7 @@ The highest accuracy achieved was 96%, and was reached using a support vector ma
 <table>
   <tr>
 	<th>No.</th>
-	<td>2. </td>
+	<td>2. <b>Paper</b></td>
   </tr>
   <tr>
 	<th>Judul</th>
@@ -67,7 +67,7 @@ feature reduction. </td>
 <table>
   <tr>
 	<th>No.</th>
-	<td>3. </td>
+	<td>3. <b>Paper</b></td>
   </tr>
   <tr>
 	<th>Judul</th>
@@ -96,7 +96,7 @@ feature reduction. </td>
 <table>
   <tr>
 	<th>No.</th>
-	<td>4. </td>
+	<td>4. <b>Paper</b></td>
   </tr>
   <tr>
 	<th>Judul</th>
@@ -125,7 +125,7 @@ feature reduction. </td>
 <table>
   <tr>
 	<th>No.</th>
-	<td>5. </td>
+	<td>5. <b>Paper</b></td>
   </tr>
   <tr>
 	<th>Judul</th>
@@ -154,7 +154,7 @@ feature reduction. </td>
 <table>
   <tr>
 	<th>No.</th>
-	<td>6. </td>
+	<td>6. <b>Paper</b> </td>
   </tr>
   <tr>
 	<th>Judul</th>
@@ -183,7 +183,7 @@ feature reduction. </td>
 <table>
   <tr>
 	<th>No.</th>
-	<td>7. </td>
+	<td>7. <b>Book</b></td>
   </tr>
   <tr>
 	<th>Judul</th>
@@ -224,7 +224,7 @@ novel malwares. </td>
 <table>
   <tr>
 	<th>No.</th>
-	<td>8. </td>
+	<td>8. <b>Book</b> </td>
   </tr>
   <tr>
 	<th>Judul</th>
@@ -248,7 +248,126 @@ novel malwares. </td>
   </tr>
 </table>
 </div>
+
+<div class="divtable">
+<table>
+  <tr>
+	<th>No.</th>
+	<td>9. <b>Paper</b></td>
+  </tr>
+  <tr>
+	<th>Judul</th>
+	<td>An Approach for Malware Behavior Identification and Classification</td>
+  </tr>
+  <tr>
+	<th>Penulis</th>
+	<td>Mohamad Fadli Zolkipli, Aman Jantan</td>
+  </tr>
+  <tr>
+	<th>Abstrak</th>
+	<td>Malware is one of the major security threats that can break computer operation. However, commercial anti- virus or anti-spyware that used signature-based matching to detects malware cannot solve that kind of threats. Nowadays malware writers try to avoid detection by using several techniques such as polymorphic, metamorphic and also hiding technique. In order to overcome that issue, we proposed a new framework for malware behavior identification and classification that apply dynamic approach. This framework consists of two major processes such as behavior identification and malware classification. These two major processes will integrate together as interrelated process in our proposed framework. Result from this study is a new framework that able to identify and classify malware based on it behaviors.</td>
+  </tr>
+  <tr>
+	<th>Metode</th>
+	<td>In order to overcome that issue, we proposed a new framework for malware behavior identification and classification that apply dynamic approach. This framework consists of two major processes such as behavior identification and malware classification. These two major processes will integrate together as interrelated process in our proposed framework. Result from this study is a new framework that able to identify and classify malware based on it behaviors. </td>
+  </tr>
+  <tr>
+	<th>File</th>
+	<td><a href="reff/An-Approach-for-Malware-Behavior-Identification-and-Classification.pdf" target="_blank">An-Approach-for-Malware-Behavior-Identification-and-Classification.pdf </a> </td>
+  </tr>
+</table>
+</div>
+
+<div class="divtable">
+<table>
+  <tr>
+	<th>No.</th>
+	<td>10.<b>Paper</b></td>
+  </tr>
+  <tr>
+	<th>Judul</th>
+	<td>Automated Classification and Analysis of Internet Malware</td>
+  </tr>
+  <tr>
+	<th>Penulis</th>
+	<td>Michael Bailey, Jon Oberheide, dkk.</td>
+  </tr>
+  <tr>
+	<th>Abstrak</th>
+	<td>Numerous attacks, such as worms, phishing, and botnets, threaten the availability of the Internet, the integrity of its hosts, and the privacy of its users. A core element of defense against these attacks is anti-virus(AV)–a service that detects, removes, and characterizes these threats. The ability of these prod- ucts to successfully characterize these threats has far-reaching effects—from facilitating sharing across organizations, to detecting the emergence of new threats, and assessing risk in quarantine and cleanup. In this paper, we examine the ability of existing host-based anti-virus products to provide semantically meaningful information about the malicious software and tools (or malware) used by attackers. Using a large, recent collection of malware that spans a variety of attack vectors (e.g., spyware, worms, spam), we show that different AV products characterize malware in ways that are inconsistent across AV products, incomplete across malware, and that fail to be concise in their semantics. To address these limitations, we propose a new classification technique that describes malware behavior in terms of system state changes (e.g., files written, processes created) rather than in sequences or patterns of system calls. To address the sheer volume of malware and diversity of its behavior, we provide a method for automatically catego- rizing these profiles of malware into groups that reflect similar classes of behaviors and demonstrate how behavior-based clustering provides a more direct and effective way of classifying and analyzing Internet malware </td>
+  </tr>
+  <tr>
+	<th>Metode</th>
+	<td>To address the shear volume of malware and diversity of its behavior, we provide a method for automatically categorizing these profiles of malware into groups that reflect similar classes of behaviors. These methods are thoroughly evaluated in the context of a malware dataset that is large, recent, and diverse in the set of attack vectors it represents (e.g., spam, worms, bots, spyware). </td>
+  </tr>
+  <tr>
+	<th>File</th>
+	<td><a href="reff/Automated-Classification-and-Analysis-of-Internet-Malware.pdf" target="_blank">Automated-Classification-and-Analysis-of-Internet-Malware.pdf </a>  </td>
+  </tr>
+</table>
+</div>
+
+
 <!--
+<div class="divtable">
+<table>
+  <tr>
+	<th>No.</th>
+
+  </tr>
+  <tr>
+	<th>Judul</th>
+
+  </tr>
+  <tr>
+	<th>Penulis</th>
+
+  </tr>
+  <tr>
+	<th>Abstrak</th>
+
+  </tr>
+  <tr>
+	<th>Metode</th>
+
+  </tr>
+  <tr>
+	<th>File</th>
+	<td><a href="reff/" target="_blank"></a></td>
+  </tr>
+</table>
+</div>
+
+
+<div class="divtable">
+<table>
+  <tr>
+	<th>No.</th>
+
+  </tr>
+  <tr>
+	<th>Judul</th>
+
+  </tr>
+  <tr>
+	<th>Penulis</th>
+
+  </tr>
+  <tr>
+	<th>Abstrak</th>
+
+  </tr>
+  <tr>
+	<th>Metode</th>
+
+  </tr>
+  <tr>
+	<th>File</th>
+	<td><a href="reff/" target="_blank"></a></td>
+  </tr>
+</table>
+</div>
+
 <div class="divtable">
 <table>
   <tr>
