--- a/_includes/modulku.html
+++ b/_includes/modulku.html
@@ -41,6 +41,43 @@
 	}
 	//======End Fungsi go-to-top===========
 </script>
+
+
+<!-- STYLE UNTUK DIV KOLOM DAN ROWS -->
+<style type="text/css">
+        .table {
+            display: table;
+        }
+
+        .row {
+            display: table-row;	
+        }
+
+        .column, .no, .jdpdf, .np, .abmet {
+            display: table-cell;
+            vertical-align: top;
+			border: 0px solid gray;
+			padding: 4px;
+			border-left:0px solid gray;
+			border-bottom: 1px solid gray;		
+        }
+		.no, .jdpdf, .np, .abmet {
+			border-bottom: 1px solid gray;	
+			font-weight: bold;	
+		}
+		.no{
+			width: 2%;
+		}
+		.jdpdf{
+			width: 18%;
+		}
+		.np{
+			width: 14%;			
+		}
+		.abmet{
+			width: 30%;			
+		}
+</style>
 </body>
 </html>
 
