--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,10 @@
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="img/cantik-icon.png">
+
+ <!-- Tambahan include JQuery -->
+	<script src="js/jquery.min.js"></script>
 	
 	{% seo %}
+
 </head>
