--- a/_includes/penelitian/reff-tes.html
+++ b/_includes/penelitian/reff-tes.html
@@ -1,33 +1,54 @@
-<style type="text/css">
-        .table {
-            display: table;
-        }
 
-        .row {
-            display: table-row;
-        }
 
-        .column {
-            display: table-cell;
-            vertical-align: top;
-        }
-    </style>
-    
-<div>
-  <div>
-	<div>1. </div>
-	<div>Automated malware detection using artifacts in forensic memory images </div>
-	<div>Rui Li, Bo Yuan dkk. </div>
-	<div> Malware is one of the greatest and most rapidly growing threats to the digital world. </div>
-	<div>Our approach is a reactive one, in that it detects malware that is already on the system. </div>
-	<div> </div>
+<a href="#" onclick="msg('Namaku : M. Ikhwan N. Elyas')">TES Pesan show</a>
+<a href="#" id="hh" onclick="">Hide Header</a>
+
+<div class="table">
+  <div class="rowxh" id="hd">
+	<div class="no">No. </div>
+	<div class="jdpdf">JUDUL  </div>
+	<div class="np">PENULIS  </div>
+	<div class="abmet">ABSTRAK </div>
+	<div class="abmet">METODE</div>
+	<div class="jdpdf">FILE </div>
   </div>
-  <div>
-	<div>2. </div>
-	<div>Classification of Malware Families Based on N-grams Sequential Pattern Features </div>
-	<div>Chatchai L., Ohm Sornil </div>
-	<div>Malware family identification is a complex process involving extraction of distinctive characteristics  </div>
-	<div>Features are created in 4 major steps: n-gram extraction,</div>
-	<div> </div>
+  <div class="rowx">
+	<div class="columnd">1. </div>
+	<div class="columnd">Automated malware detection using artifacts in forensic memory images </div>
+	<div class="columnd">Rui Li, Bo Yuan dkk. </div>
+	<div class="columnd">Malware is one of the greatest and most rapidly growing threats to the digital world. </div>
+	<div class="columnd">Our approach is a reactive one, in that it detects malware that is already on the system. </div>
+	<div class="columnd">utomated malware detection using artifacts in forensic memory images </div>
+  </div>
+  <div class="rowx">
+	<div class="columnd">2. </div>
+	<div class="columnd">Classification of Malware Families Based on N-grams Sequential Pattern Features </div>
+	<div class="columnd">Chatchai L., Ohm Sornil </div>
+	<div class="columnd">Malware family identification is a complex process involving extraction of distinctive characteristics  </div>
+	<div class="columnd">Features are created in 4 major steps: n-gram extraction,</div>
+	<div class="columnd">lassification of Malware Families </div>
   </div>
 </div>
+
+<br>
+
+
+
+<script>
+$(document).ready(function(){
+    $("pX").click(function(){
+        $(this).hide();
+    });
+});
+$(document).ready(function(){
+    $("#hh").click(function(){
+        $("#hd").hide();
+    });
+});
+</script>
+
+
+<p>If you click on me, I will disappear.</p>
+<p>Click me away!</p>
+<p>Click me too!</p>
+
