--- a/_includes/modulku.html
+++ b/_includes/modulku.html
@@ -51,7 +51,7 @@
 
         .row {
             display: table-row;	
-
+			border-bottom: 1px solid gray;
         }
 		.rowb{
 			border-bottom: 1px solid gray;
