Fix reff btntop index

--- a/css/main.scss
+++ b/css/main.scss
@@ -100,3 +100,14 @@ th, td {
   	background-color: darkgray;
 	opacity:0.8;
 }
+//--- UNTUK BOX DIV --------
+.tocContainer{
+	margin-left:0px;
+	margin-bottom:10px;
+	background-color:#eee;
+	border-radius:4px;
+	-webkit-border-radius:4px;
+	-moz-border-radius:4px;
+	padding:5px 16px;
+	padding-top:5px;
+}
