--- a/css/main.scss
+++ b/css/main.scss
@@ -55,11 +55,18 @@
 }
 //======untuk tulisan Arab=====
 .ar{
-	float: right;
-	alignt: right;
-	display: inline;
-	margin-left: 50px;
-	margin-right: 360px;
+	//float: right;
+	font-weight: bold;
+	font-size: 22px;
+	text-align: right;
+	margin-left:0px;
+	margin-bottom:10px;
+	background-color:#f2f2f2;
+	border-radius:8px;
+	-webkit-border-radius:4px;
+	-moz-border-radius:4px;
+	padding:10px 18px;
+	padding-top:10px;
 }
 //=====Untuk TABEL STYLE======
 table, td, th {    
@@ -101,13 +108,13 @@ th, td {
 	opacity:0.8;
 }
 //--- UNTUK BOX DIV --------
-.tocContainer{
+.tocContainer, .id{
 	margin-left:0px;
 	margin-bottom:10px;
 	background-color:#eee;
 	border-radius:4px;
 	-webkit-border-radius:4px;
 	-moz-border-radius:4px;
-	padding:5px 16px;
-	padding-top:5px;
+	padding:7px 16px;
+	padding-top:7px;
 }
