Add html video tag to Exp

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,8 @@
 
  <!-- Tambahan include JQuery -->
 	<script src="js/jquery.min.js"></script>
-	
+	<script src="js/hijricalendar-kuwaiti.js"></script>
+
 	{% seo %}
 
 </head>
