--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 	<!-- CSS & fonts -->
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | replace: '//', '/' }}">
 
+
 	<!-- RSS -->
 	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 
@@ -19,6 +20,7 @@
  <!-- Tambahan include JQuery -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/hijricalendar-kuwaiti.js"></script>
+	<script src="js/modulku.js"></script>
 
 	{% seo %}
 
