--- a/_includes/modulku.html
+++ b/_includes/modulku.html
@@ -2,101 +2,11 @@
 <body>
 <script>
 	
-//===============
-	window.onload = function(){ 
-	    //alert("TES PESAN-PESAN .........!");
-
-		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-			//document.getElementById("jd").innerHTML = "<b>---Hello SmartPhone---</b>";
-			//zoom();
-			var d1 = document.getElementById('linkdiv1');
-			var d2 = document.getElementById('linkdiv2');
-			var d3 = document.getElementById('linkdiv3');
-			d1.removeAttribute("class");
-			d2.removeAttribute("class");
-			d3.removeAttribute("class");
-		}
-		else
-		{
-			;
-
-		}
-	};
-	//========Ini Fungsi Untuk Show Button go-to-top========
-		/*
-			window.onscroll = function() {scrollFunction()};
-
-			function scrollFunction() {
-				if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-					document.getElementById("myBtn").style.display = "block";
-				} else {
-					document.getElementById("myBtn").style.display = "none";
-				}
-			}
-
-			// When the user clicks on the button, scroll to the top of the document
-			function topFunction() {
-				document.body.scrollTop = 0;
-				document.documentElement.scrollTop = 0;
-			}
-		*/
-	//======End Fungsi go-to-top===========
-</script>
-
-
+<!-- SEBELUMNYA HALAMAN INI DIGUNAKAN UNTUK MENAMPUNG FUNGSI JS DAN CSS -->
+<!-- TAPI UDAH TIDAK LAGI KARENA SEMUA FUNGSI TELAH DIPINDAHKAN KE HALAMAN modulku.js dan main.scss -->
 <!-- STYLE UNTUK DIV KOLOM DAN ROWS -->
 <style type="text/css">
-        .table {
-            display: table;
-        }
-
-        .row {
-            display: table-row;	
-			border-bottom: 1px solid gray;
-        }
-		.rowb{
-			border-bottom: 1px solid gray;
-			padding: 4px;
-		}
-        .column, .no, .jdpdf, .np, .abmet {
-            display: table-cell;
-            vertical-align: top;
-			border: 0px solid gray;
-			padding: 4px;
-			border-left:0px solid gray;
-			border-bottom: 0px solid gray;		
-        }
-        .columnb {        
-            vertical-align: top;
-			border: 0px solid gray;
-			padding: 4px;
-			border-left:0px solid gray;
-			border-bottom: 0px solid gray;
-		}
-		.no, .jdpdf, .np, .abmet {
-			border-bottom: 1px solid gray;	
-			font-weight: bold;	
-		}
-		.no{
-			width: 2%;
-		}
-		.jdpdf{
-			width: 18%;
-		}
-		.np{
-			width: 14%;			
-		}
-		.abmet{
-			width: 30%;			
-		}
-		.hd{
-			display: none;
-		}
-		.hds{
-			display: block;
-			font-weight: bold;s
-		}
-
+ 
 </style>
 </body>
 </html>
