--- a/css/main.scss
+++ b/css/main.scss
@@ -181,4 +181,5 @@ th, td {
 	padding:7px 16px;
 	padding-top:7px;
 }
-
+//--- Untuk IFRAME --- 
+iframe {width: 100%; height: 600px; border: none;}
