add gdiv in maincss 1827

--- a/css/main.scss
+++ b/css/main.scss
@@ -209,6 +209,10 @@ a {
 	opacity:0.8;
 }
 //--- UNTUK BOX DIV --------
+.gdiv{
+	background-color:#eee;
+}
+
 .tocContainer, .id{
 	margin-left:0px;
 	margin-bottom:10px;
