--- a/css/main.scss
+++ b/css/main.scss
@@ -118,44 +118,20 @@
 }
 //======untuk tulisan Arab=====
 .ar{
-	//float: right;
-  direction:RTL;
-  unicode-bidi:embed;
-  //====================
-	font-weight: bold;
 	font-size: 22px;
-	text-align: right;
-	margin-left:0px;
-	margin-bottom:10px;
-	background-color:#f2f2f2;
-	border-radius:8px;
-	-webkit-border-radius:4px;
-	-moz-border-radius:4px;
-	padding:10px 18px;
-	padding-top:10px;
 }
 .arx {
-  direction:RTL;
-  unicode-bidi:embed;
-  //====================
-  font-weight: bold;
 	font-size: 26px;
-	text-align: right;
-	margin-left:0px;
-	margin-bottom:10px;
-	background-color:#f2f2f2;
-	border-radius:8px;
-	-webkit-border-radius:4px;
-	-moz-border-radius:4px;
-	padding:10px 18px;
-	padding-top:10px;
 }
 .arxx {
+	font-size: 30px;
+}
+.arxx, .arx, .ar{
+	border-top:0.5px solid #C0C0C0;
   direction:RTL;
   unicode-bidi:embed;
   //====================
   font-weight: bold;
-	font-size: 30px;
 	text-align: right;
 	margin-left:0px;
 	margin-bottom:10px;
@@ -212,12 +188,13 @@ a {
 .gdiv{
 	background-color:#eee;
 }
-
+.id, .idx {
+		border-top:0.5px solid #C0C0C0;	
+}
 .tocContainer, .id{
 	margin-left:0px;
 	margin-bottom:10px;
 	background-color:#eee;
-	border-top:0.5px solid #C0C0C0;
 	border-radius:4px;
 	-webkit-border-radius:0px; 
 	-moz-border-radius:0px;
@@ -230,7 +207,6 @@ a {
 	margin-left:0px;
 	margin-bottom:10px;
 	background-color:#eee;
-	border-top:0.5px solid #C0C0C0;
 	border-radius:4px;
 	-webkit-border-radius:0px;
 	-moz-border-radius:0px;
