Fix font color 1328 ke-184

--- a/css/main.scss
+++ b/css/main.scss
@@ -126,6 +126,9 @@
 .arxx {
 	font-size: 30px;
 }
+.arxx, .arx, .idx {
+		color:crimson;
+}
 .arxx, .arx, .ar{
 	border-top:0.5px solid #C0C0C0;
   direction:RTL;
