--- a/css/main.scss
+++ b/css/main.scss
@@ -127,14 +127,18 @@
 	font-size: 30px;
 }
 .arxx, .arx, .idx {
-		color:crimson;
+	color:crimson;
+	font-weight: bold;
+}
+.ar{
+	font-weight: 500;
 }
 .arxx, .arx, .ar{
 	border-top:0.5px solid #C0C0C0;
-  direction:RTL;
-  unicode-bidi:embed;
-  //====================
-  font-weight: bold;
+	direction:RTL;
+	unicode-bidi:embed;
+	//====================
+	//font-weight: bold;
 	text-align: right;
 	margin-left:0px;
 	margin-bottom:10px;
