UpDate linkcollection ke-199

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,10 +17,16 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="img/cantik-icon.png">
 
+
  <!-- Tambahan include JQuery -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/hijricalendar-kuwaiti.js"></script>
 	<script src="js/modulku.js"></script>
+
+ <!-- Tambahan Untuk PAGE*/index.html
+
+ -->
+	<link rel="shortcut icon" type="image/png" href="../img/cantik-icon.png">
 
 	{% seo %}
 
