--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,8 @@
   </div>
 </header>
 <div onclick="topFunction()" id="myBtn" title="Go to top" >
-<img id="imgMyBtn" src="img/top-icon-25-512.png" height="36px" width="36px"></div>
+<img id="imgMyBtn" src="img/top-icon-25-512.png" height="36px" width="36px">
+
+</div>
 
 
