Fix Js for detect phone for show menu

--- a/css/main.scss
+++ b/css/main.scss
@@ -210,7 +210,8 @@ color:#6699ff;
 }
 
 #myBtn:hover {
-  	background-color: darkgray;
+  	//background-color: darkgray;
+  	background-color: #6699ff;
 	opacity:0.8;
 }
 
